# py-kms

./: README.md  SETUP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
py-kms/: Etrigan.py  FIXES_README.md  IMPROVEMENTS_SUMMARY.py  KmsDataBase.xml  TIMEZONE_FIX.py  pykms_Base.py  pykms_Client.py  pykms_Connect.py  pykms_DB2Dict.py  pykms_Filetimes.py  pykms_GuiBase.py  pykms_GuiMisc.py  pykms_KmsDbCache.py  pykms_Misc.py  pykms_PidGenerator.py  pykms_RpcBase.py  pykms_RpcBind.py  pykms_RpcRequest.py  pykms_Server.py  pykms_Sql.py  pykms_ThreadSafeConfig.py  pykms_Validator.py  pykms_WebUI.py  pykms_version.py  requirements.txt
py-kms/tests/: conftest.py  test_config_json.py  test_filetimes.py  test_improvements.py  test_version.py
wiki/: Windows-GVLK-Keys.md
